[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogSystem/Question/Question.gd" type="Script" id=1]
[ext_resource path="res://DialogSystem/Profile/Character_Sample_modified.png" type="Texture" id=2]

[node name="Question" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_right = 28.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 628.0
margin_bottom = 64.0

[node name="Talking1" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="StoryText" type="RichTextLabel" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 628.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "You finally catch sight of the thieves hacking at a large tree and arguing among themselves."
text = "You finally catch sight of the thieves hacking at a large tree and arguing among themselves."

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 628.0
margin_bottom = 68.0

[node name="OptionsList" type="VBoxContainer" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 314.0
margin_right = 314.0

[node name="Option1" type="Button" parent="Panel/VBoxContainer/CenterContainer/OptionsList"]
visible = false
margin_right = 181.0
margin_bottom = 20.0
text = "Move closer to eavesdrop."
flat = true

[node name="Option2" type="Button" parent="Panel/VBoxContainer/CenterContainer/OptionsList"]
visible = false
margin_right = 134.0
margin_bottom = 20.0
text = "Keep your distance"
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/OptionsList/Option1" to="." method="_on_Button_pressed"]
